resolve coding spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,28 @@
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 body {
 	font-family: "Arial";
 	font-size: 1em;
+	padding: 8px;
+}
+
+#top {
+	background-color: white;
+	padding-bottom: 5px;
+	position: sticky;
+	top: 8px;
+}
+
+#top h1 {
+	margin: 0;
+}
+
+#top p {
+	margin: 8px 0;
 }
 
 input, button {
@@ -10,6 +32,7 @@ input, button {
 
 table {
 	margin-top: 5px;
+	padding: 10px 0;
 }
 
 td, th {
@@ -28,6 +51,10 @@ tr td:first-child {
 
 .current {
 	background-color: lightgreen;
+}
+
+.event-name {
+	user-select: none;
 }
 
 .description {
